[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexplorer"
version = "1.0.0"
description = "A Terminal-Based HEX Color Explorer"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Mallik Mohammad Musaddiq", email="mallikmusaddiq1@example.com" }
]
requires-python = ">=3.6"
dependencies = [ ]